# public_provider_leaderboard

./: .gitignore  README.md  audit.py  generate_reference_tokens.py  pyproject.toml  serve.py
audit_results/: deepseek-ai_DeepSeek-V3.2_audit_results_20260302_055152.json  deepseek-ai_DeepSeek-V3.2_audit_results_20260302_055352.json  deepseek-ai_DeepSeek-V3.2_audit_results_20260302_055821.json  deepseek-ai_DeepSeek-V3.2_audit_results_20260302_060336.json
configs/: gpt-oss-120b.json  gpt-oss-20b.json  minimax-m2-1.json  minimax-m2-5.json  mistral-large.json  model-profile.template.json  qwen3-235b-a22b-instruct-2507.json  qwen3-32b.json  qwen3-8b-local-a10.json  qwen3-8b.json  qwen3-coder-480b-a35b-instruct.json  standard-base.json
reference_tokens/: MiniMaxAI_MiniMax-M2.5.json  Qwen_Qwen3-32B.json  Qwen_Qwen3-8B.json  Qwen_Qwen3-Coder-480B-A35B-Instruct.json  canonical_prompts.json  deepseek-ai_DeepSeek-V3.2.json  moonshotai_Kimi-K2-Thinking.json  moonshotai_Kimi-K2.5.json
scripts/: generate-manifest.mjs
src/token_difr/: __init__.py  audit.py  common.py  local.py  reference_tokens.py
tests/: test_api_openai_compatible.py  test_audit_fireworks_verification_model.py  test_audit_modal_auto_manage.py  test_audit_modal_teardown.py  test_audit_public_output_sanitization.py  test_common_harmony.py  test_generate_reference_tokens.py  test_openrouter_api_tokenization.py  test_reference_tokens.py  test_serve.py
token-difr/: .gitignore  README.md  audit.py  generate_reference_tokens.py  modal_vllm_app.py  pyproject.toml  serve.py
token-difr/configs/: deepseek-v3-2.json  gpt-oss-120b.json  gpt-oss-20b.json  kimi-k2-5.json  kimi-k2-thinking.json  minimax-m2-1.json  minimax-m2-5.json  mistral-large.json  model-profile.template.json  qwen2-5-32b-instruct.json  qwen3-235b-a22b-instruct-2507.json  qwen3-8b-local-a10.json  qwen3-coder-480b-a35b-instruct.json
token-difr/reference_tokens/: MiniMaxAI_MiniMax-M2.1.json  Qwen_Qwen3-235B-A22B-Instruct-2507.json  openai_gpt-oss-120b.json  (+1 more)
(+14 files in other folders)
